--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
 	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-jdbc</artifactId>
 	    <version>4.3.6.RELEASE</version>
+	</dependency>	
+	
+	<dependency>
+	    <groupId>org.springframework.mobile</groupId>
+	    <artifactId>spring-mobile-device</artifactId>
+	    <version>1.1.5.RELEASE</version>
 	</dependency>
   
 	<!-- JSP -->  
