--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,11 @@
 	    <artifactId>json</artifactId>
 	    <version>20160810</version>
 	</dependency>
+	<dependency>
+	    <groupId>com.fasterxml.jackson.core</groupId>
+	    <artifactId>jackson-databind</artifactId>
+	    <version>2.9.5</version>
+	</dependency>
 	
 	<!-- fileupload -->
 	<dependency>
