--- a/pom.xml
+++ b/pom.xml
@@ -87,25 +87,40 @@
 	    <version>2.1.1</version>
 	</dependency>
 	
-	<!-- Apache Commons Codec -->
+	<!-- Apache Commons -->
 	<dependency>
     	<groupId>commons-codec</groupId>
     	<artifactId>commons-codec</artifactId>
     	<version>1.10</version>
+	</dependency>	
+	<dependency>
+	    <groupId>commons-dbcp</groupId>
+	    <artifactId>commons-dbcp</artifactId>
+	    <version>1.2.2</version>
 	</dependency>
 	
-	
-	
-	<!-- log4j  -->
+	<!-- logback  -->
 	<dependency>
-		<groupId>org.apache.logging.log4j</groupId>
-		<artifactId>log4j-api</artifactId>
-		<version>2.3</version>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-api</artifactId>
+	    <version>1.7.26</version>
 	</dependency>
 	<dependency>
-		<groupId>org.apache.logging.log4j</groupId>
-		<artifactId>log4j-core</artifactId>
-		<version>2.3</version>
+	    <groupId>ch.qos.logback</groupId>
+	    <artifactId>logback-classic</artifactId>
+	    <version>1.2.2</version>
+	</dependency>
+	
+	<!-- log4j2 jdbc  -->
+	<dependency>
+	    <groupId>org.bgee.log4jdbc-log4j2</groupId>
+	    <artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
+	    <version>1.16</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.lazyluke</groupId>
+	    <artifactId>log4jdbc-remix</artifactId>
+	    <version>0.2.7</version>
 	</dependency>
 	
 	<!-- apache poi -->
